@@ -18,77 +18,102 @@ class ComplexOperationsServiceTest {
     private final ComplexOperationsService service = new ComplexOperationsService();
 
     @ParameterizedTest
-    @CsvSource({"weak, false", "strongPassword1@, true", "noDigit!, false", "NoSpecialChar1, false", ",false"})
-    void validatePasswordStrengthTest(String password, boolean isStrength) {
+    @CsvSource({"weak, false", "strongPassword1@, true", "noDigit!, false", "NoSpecialChar1, false"})
+    void validate_password_strength_positive_test(String password, boolean isStrength) {
+        if (isStrength) {
+            assertTrue(service.validatePasswordStrength(password));
+        }
+    }
 
-        if (password != null) {
+    @ParameterizedTest
+    @CsvSource({"weak, false", "strongPassword1@, true", "noDigit!, false", "NoSpecialChar1, false"})
+    void validate_password_strength_negative_test(String password, boolean isStrength) {
+        if (!isStrength) {
+            assertThrows(IllegalArgumentException.class, () -> service.validatePasswordStrength(password));
+        }
+    }
 
-            if (!isStrength) {
-                assertThrows(IllegalArgumentException.class, () -> service.validatePasswordStrength(password));
-            } else {
-                assertTrue(service.validatePasswordStrength(password));
-            }
-
-        } else {
+    @ParameterizedTest
+    @NullSource
+    void validate_password_strength_null_test(String password) {
+        if (password == null) {
             assertThrows(NullPointerException.class, () -> service.validatePasswordStrength(null));
         }
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"This is correct", "This text contains error", "fail is not good", "wrong way"})
-    @NullSource
-    void processTextTest(String text) {
-
-        if (text == null) {
-            assertThrows(NullPointerException.class, () -> service.processText(null));
-            return;
-        }
-
-        if (text.contains("error") || text.contains("fail") || text.contains("wrong")) {
-            assertThrows(IllegalArgumentException.class, () -> service.processText(text));
-        } else {
+    void process_text_positive_test(String text) {
+        if (!(text.contains("error") || text.contains("fail") || text.contains("wrong"))) {
             assertTrue(service.processText(text));
         }
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"1,2,3", "one,two,three", "10,,20", "5.5,6.5"})
+    @ValueSource(strings = {"This is correct", "This text contains error", "fail is not good", "wrong way"})
+    void process_text_negative_test(String text) {
+        if (text.contains("error") || text.contains("fail") || text.contains("wrong")) {
+            assertThrows(IllegalArgumentException.class, () -> service.processText(text));
+        }
+    }
+
+    @ParameterizedTest
     @NullSource
-    void sumOfNumbersInStringTest(String numbers) {
-        if (numbers != null) {
+    void process_text_null_test(String text) {
+        if (text == null) {
+            assertThrows(NullPointerException.class, () -> service.processText(null));
+        }
+    }
 
-            if (numbers.matches(".*[a-zA-Z]+.*") || numbers.contains(",,")) {
-                assertThrows(IllegalArgumentException.class, () -> service.sumOfNumbersInString(numbers));
-            } else {
-                double expectedSum = computeExpectedSum(numbers);
-                Assertions.assertEquals(expectedSum, service.sumOfNumbersInString(numbers));
-            }
+    @ParameterizedTest
+    @ValueSource(strings = {"1,2,3", "one,two,three", "10,,20", "5.5,6.5"})
+    void sum_of_numbers_in_string_positive_test(String numbers) {
+        if (!(numbers.matches(".*[a-zA-Z]+.*") || numbers.contains(",,"))) {
+            double expectedSum = computeExpectedSum(numbers);
+            Assertions.assertEquals(expectedSum, service.sumOfNumbersInString(numbers));
+        }
+    }
 
-        } else {
+    @ParameterizedTest
+    @ValueSource(strings = {"1,2,3", "one,two,three", "10,,20", "5.5,6.5"})
+    void sum_of_numbers_in_string_negative_test(String numbers) {
+        if (numbers.matches(".*[a-zA-Z]+.*") || numbers.contains(",,")) {
+            assertThrows(IllegalArgumentException.class, () -> service.sumOfNumbersInString(numbers));
+        }
+    }
+
+    @ParameterizedTest
+    @NullSource
+    void sum_of_numbers_in_string_null_test(String numbers) {
+        if (numbers == null) {
             assertThrows(NullPointerException.class, () -> service.sumOfNumbersInString(null));
         }
     }
 
     double computeExpectedSum(String numbers) {
-        System.out.println(Arrays.stream(numbers.split(",")).mapToDouble(Double::parseDouble).sum());
         return Arrays.stream(numbers.split(",")).map(Double::parseDouble).reduce(Double::sum).orElse(0.0);
-
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"http://valid.com", "https://valid.com", "ftp://invalid.com", "justtext"})
+    void validate_url_format_positive_test(String url) {
+        if (url.startsWith("http")) {
+            assertTrue(service.validateUrlFormat(url));
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"http://valid.com", "https://valid.com", "ftp://invalid.com", "justtext"})
+    void validate_url_format_negative_test(String url) {
+        if (!url.startsWith("http")) {
+            assertThrows(IllegalArgumentException.class, () -> service.validateUrlFormat(url));
+        }
+    }
+
+    @ParameterizedTest
     @NullSource
-    void validateUrlFormatTest(String url) {
-
-        if (url != null) {
-
-            if (!url.startsWith("http")) {
-                assertThrows(IllegalArgumentException.class, () -> service.validateUrlFormat(url));
-            } else {
-                assertTrue(service.validateUrlFormat(url));
-            }
-
-        } else {
+    void validate_url_format_null_test(String url) {
+        if (url == null) {
             assertThrows(NullPointerException.class, () -> service.validateUrlFormat(null));
         }
     }
@@ -96,27 +121,48 @@ class ComplexOperationsServiceTest {
     public static Stream<Arguments> emailListProvider() {
         return Stream.of(
                 Arguments.of(Arrays.asList("valid@email.com", "invalid-email"), false),
-                Arguments.of(Arrays.asList("valid@email.com", "also.valid@email.com"), true),
-                Arguments.of(List.of(), false)
+                Arguments.of(Arrays.asList("valid@email.com", "also.valid@email.com"), true)
         );
     }
 
     @ParameterizedTest
     @MethodSource("emailListProvider")
-    void checkEmailListConsistencyTest(List<String> emails, boolean isValid) {
+    void check_email_list_consistency_positive_test(List<String> emails, boolean isValid) {
+        if (isValid) {
+            assertTrue(service.checkEmailListConsistency(emails));
+        }
+    }
 
+    @ParameterizedTest
+    @MethodSource("emailListProvider")
+    void check_email_list_consistency_negative_test(List<String> emails, boolean isValid) {
+        if (!isValid) {
+            assertThrows(IllegalArgumentException.class, () -> service.checkEmailListConsistency(emails));
+        }
+    }
+
+    public static Stream<Arguments> emptyList() {
+        return Stream.of(Arguments.of(List.of()));
+    }
+
+    @ParameterizedTest
+    @MethodSource("emptyList")
+    void check_email_list_consistency_empty_list_test(List<String> emails) {
         if (emails.isEmpty()) {
-            assertThrows(NullPointerException.class, () -> service.checkEmailListConsistency(emails),
-                    "Должно быть выброшено исключение NullPointerException");
+            assertThrows(NullPointerException.class, () -> service.checkEmailListConsistency(emails));
+        }
+    }
 
-        } else {
-            if (!isValid) {
-                assertThrows(IllegalArgumentException.class, () -> service.checkEmailListConsistency(emails),
-                        "Должно быть выброшено исключение IllegalArgumentException");
-            } else {
-                assertTrue(service.checkEmailListConsistency(emails),
-                        "Список должен быть согласованным");
-            }
+
+    @ParameterizedTest
+    @CsvSource({
+            "ANNa, true",
+            "Palindrome, false",
+            "Nan,true"
+    })
+    void check_string_palindrome_positive_test(String word, boolean isPalindrome) {
+        if (isPalindrome) {
+            assertTrue(service.checkStringPalindrome(word));
         }
     }
 
@@ -124,39 +170,44 @@ class ComplexOperationsServiceTest {
     @CsvSource({
             "ANNa, true",
             "Palindrome, false",
-            "Nan,true",
-            ", false"
+            "Nan,true"
     })
-    void checkStringPalindromeTest(String word, boolean isPalindrome) {
-
-        if (word == null) {
-            assertThrows(NullPointerException.class, () -> service.checkStringPalindrome(null));
-        } else {
-
-            if (!isPalindrome) {
-                assertThrows(IllegalArgumentException.class, () -> service.checkStringPalindrome(word));
-            } else {
-                assertTrue(service.checkStringPalindrome(word));
-            }
+    void check_string_palindrome_negative_test(String word, boolean isPalindrome) {
+        if (!isPalindrome) {
+            assertThrows(IllegalArgumentException.class, () -> service.checkStringPalindrome(word));
         }
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"AB123456","sDfjj223", "Ac786543", "111124AS"})
     @NullSource
-    void validateIdentificationNumberTest(String id) {
+    void check_string_palindrome_null_test(String word) {
+        if (word == null) {
+            assertThrows(NullPointerException.class, () -> service.checkStringPalindrome(null));
+        }
+    }
 
-        if(id!=null) {
+    @ParameterizedTest
+    @ValueSource(strings = {"AB123456", "sDfjj223", "Ac786543", "111124AS"})
+    void validate_identification_number_positive_test(String id) {
+        if (id.matches("^[A-Za-z]{2}\\d{6}$")) {
+            assertTrue(service.validateIdentificationNumber(id));
+        }
+    }
 
-            if (!id.matches("^[A-Za-z]{2}\\d{6}$")) {
-                assertThrows(IllegalArgumentException.class,
-                        ()-> service.validateIdentificationNumber(id));
-            }else {
-                assertTrue(service.validateIdentificationNumber(id));
-            }
+    @ParameterizedTest
+    @ValueSource(strings = {"AB123456", "sDfjj223", "Ac786543", "111124AS"})
+    void validate_identification_number_negative_test(String id) {
+        if (!id.matches("^[A-Za-z]{2}\\d{6}$")) {
+            assertThrows(IllegalArgumentException.class,
+                    () -> service.validateIdentificationNumber(id));
+        }
+    }
 
-        }else {
-            assertThrows(NullPointerException.class,()->service.validateIdentificationNumber(null));
+    @ParameterizedTest
+    @NullSource
+    void validate_identification_number_null_test(String id) {
+        if (id == null) {
+            assertThrows(NullPointerException.class, () -> service.validateIdentificationNumber(null));
         }
     }
 
@@ -170,61 +221,93 @@ class ComplexOperationsServiceTest {
 
     @ParameterizedTest
     @MethodSource("listNumbers")
-    void checkSumOfListAgainstThresholdTest(List<Integer> numbers, int threshold, boolean expectedResult) {
+    void check_sum_of_list_against_threshold_positive_test(List<Integer> numbers, int threshold, boolean expectedResult) {
+            if (expectedResult) {
+                assertTrue(service.checkSumOfListAgainstThreshold(numbers, threshold));
+            }
+    }
 
-        if (numbers != null) {
-
+    @ParameterizedTest
+    @MethodSource("listNumbers")
+    void check_sum_of_list_against_threshold_negative_test(List<Integer> numbers, int threshold, boolean expectedResult) {
             if (!expectedResult) {
                 assertThrows(IllegalArgumentException.class,
                         () -> service.checkSumOfListAgainstThreshold(numbers, threshold));
-            } else {
-                    assertTrue(service.checkSumOfListAgainstThreshold(numbers, threshold));
             }
+    }
 
-        } else {
+    @ParameterizedTest
+    @CsvSource(",5")
+    void check_sum_of_list_against_threshold_null_test(List<Integer> numbers, int threshold) {
+        if (numbers == null) {
             assertThrows(NullPointerException.class,
                     () -> service.checkSumOfListAgainstThreshold(null, threshold));
         }
     }
 
     @ParameterizedTest
-    @ValueSource(strings = { "192.168.0.1","255.255.255.255","8.8.8.8","256.168.0.1","192.168.0","172.16.31.45.1"})
-    void validateIPAddressTest(String ipAddress) {
-
-        if(ipAddress!=null) {
-
-            if (!ipAddress.matches("^([0-9]{1,3}\\.){3}[0-9]{1,3}$")) {
-                assertThrows(IllegalArgumentException.class, () -> service.validateIPAddress(ipAddress));
-            }else {
+    @ValueSource(strings = {"192.168.0.1", "255.255.255.255", "8.8.8.8", "256.168.0.1", "192.168.0", "172.16.31.45.1"})
+    void validate_ip_address_positive_test(String ipAddress) {
+            if (ipAddress.matches("^([0-9]{1,3}\\.){3}[0-9]{1,3}$")) {
                 assertTrue(service.validateIPAddress(ipAddress));
             }
+    }
 
-        }else {
-            assertThrows(NullPointerException.class,()-> service.validateIPAddress(null));
+    @ParameterizedTest
+   @NullSource
+    void validate_ip_address_null_test(String ipAddress) {
+        if (ipAddress == null) {
+            assertThrows(NullPointerException.class, () -> service.validateIPAddress(null));
         }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"192.168.0.1", "255.255.255.255", "8.8.8.8", "256.168.0.1", "192.168.0", "172.16.31.45.1"})
+    void validate_ip_address_negative_test(String ipAddress) {
+            if (!ipAddress.matches("^([0-9]{1,3}\\.){3}[0-9]{1,3}$")) {
+                assertThrows(IllegalArgumentException.class, () -> service.validateIPAddress(ipAddress));
+            }
     }
 
     public static Stream<Arguments> listsInStrings() {
         return Stream.of(
-                Arguments.of(Arrays.asList("1","1","2","3"), false),
-                Arguments.of(Arrays.asList("1", "2", "3","4"), true),
-                Arguments.of(Arrays.asList(null, null,"5","4"), true),
-                Arguments.of(Arrays.asList(null, null,"5","4","4"), false),
-                Arguments.of(Arrays.asList(null, null), false)
+                Arguments.of(Arrays.asList("1", "1", "2", "3"), false),
+                Arguments.of(Arrays.asList("1", "2", "3", "4"), true),
+                Arguments.of(Arrays.asList(null, null, "5", "4"), true),
+                Arguments.of(Arrays.asList(null, null, "5", "4", "4"), false)
         );
     }
+
     @ParameterizedTest
     @MethodSource("listsInStrings")
-    void ensureNoDuplicateEntries(List<String> entries,boolean expectedResult) {
-        if(entries.isEmpty()){
-            assertThrows(NullPointerException.class,()->service.ensureNoDuplicateEntries(entries));
-        }
-        if(!expectedResult){
-            assertFalse(service.ensureNoDuplicateEntries(entries));
-        }else{
+    void ensure_no_duplicate_entries_positive_test(List<String> entries, boolean expectedResult) {
+        if (expectedResult) {
             assertTrue(service.ensureNoDuplicateEntries(entries));
         }
+    }
 
+    @ParameterizedTest
+    @MethodSource("listsInStrings")
+    void ensure_no_duplicate_entries_negative_test(List<String> entries, boolean expectedResult) {
+        if (!expectedResult) {
+            assertFalse(service.ensureNoDuplicateEntries(entries));
+        }
+    }
+
+    @ParameterizedTest
+    @MethodSource("listsInStrings")
+    void ensure_no_duplicate_entries_list_empty_test(List<String> entries) {
+        if (entries.isEmpty()) {
+            assertThrows(NullPointerException.class, () -> service.ensureNoDuplicateEntries(entries));
+        }
+    }
+
+    @ParameterizedTest
+    @MethodSource("listsInStrings")
+    void ensure_no_duplicate_entries_null_test(List<String> entries) {
+        if (entries==null) {
+            assertThrows(CollectionEmptyException.class, () -> service.ensureNoDuplicateEntries(entries));
+        }
     }
 }
 
